oauth module added
```
ng g module oauth

ng g component oauth --flat --module=oauth/oauth

ng g module oauth/oauth-routing  --flat --module=oauth/oauth

```

--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -47,8 +47,8 @@
     <crm-navigation-bar *ngIf="isAuthenticated()" (toggleSidenav)="navigationSidenav.toggle()">
     </crm-navigation-bar>
     -->
-    <span>sakldjflk asdlkfjklsadfjkl jsdklafjklsad</span>
-    <!--<router-outlet></router-outlet>-->
+    <!--<span>sakldjflk asdlkfjklsadfjkl jsdklafjklsad</span>-->
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 
 </mat-sidenav-container>
