--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<!--<app-nav></app-nav>-->
-<router-outlet></router-outlet>
+<app-navigation-bar>
+</app-navigation-bar>
+<div style="flex-grow: 1; overflow-y: scroll;">
+  <router-outlet></router-outlet>
+</div>
