--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,54 +1,2 @@
-<app-navigation-bar (toggleSidenav)="navigationSidenav.toggle()">
+<app-navigation-bar>
 </app-navigation-bar>
-
-<mat-sidenav-container autosize>
-
-  <mat-sidenav #navigationSidenav [mode]="mode" role="navigation" [opened]="opened" [fixedInViewport]="true" [fixedTopGap]="64">
-
-    <mat-toolbar>
-      <mat-toolbar-row>
-        <h2 class="toolbar-title"> {{ 'APP_TOOLBAR_TITLE' }} </h2>
-      </mat-toolbar-row>
-    </mat-toolbar>
-
-    <mat-nav-list>
-
-      <h2 matSubheader> {{ 'MY_WORK' }} </h2>
-
-      <a mat-list-item routerLink="/" style="height: 0;"></a>
-
-      <a *ngFor="let item of myWorkRoutes"
-         mat-list-item
-         (click)="navigationSidenav.close()"
-         [routerLink]="[item.route]"
-         routerLinkActive="list-item-active">
-        <mat-icon matListIcon class="app-nav-list-icon"> {{ item.icon }} </mat-icon>
-        {{item.title}}
-      </a>
-
-      <mat-divider></mat-divider>
-
-      <h2 matSubheader> {{ 'CUSTOMERS' }} </h2>
-
-      <a *ngFor="let item of customerRoutes"
-         mat-list-item
-         (click)="navigationSidenav.close()"
-         [routerLink]="[item.route]"
-         routerLinkActive="list-item-active">
-        <mat-icon matListIcon class="app-nav-list-icon"> {{ item.icon }} </mat-icon>
-        {{item.title}}
-      </a>
-
-    </mat-nav-list>
-  </mat-sidenav>
-
-  <mat-sidenav-content role="region" class="sidenavContent">
-    <!--
-    <crm-navigation-bar *ngIf="isAuthenticated()" (toggleSidenav)="navigationSidenav.toggle()">
-    </crm-navigation-bar>
-    -->
-    <!--<span>sakldjflk asdlkfjklsadfjkl jsdklafjklsad</span>-->
-    <router-outlet></router-outlet>
-  </mat-sidenav-content>
-
-</mat-sidenav-container>
