--- a/src/app/core/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/core/components/navigation-bar/navigation-bar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="crm-navigation-bar">
   <mat-toolbar-row>
-    <button mat-icon-button (click)="toggleSidenav.emit()">
+    <button mat-icon-button (click)="toggleSidenav()">
       <mat-icon>menu</mat-icon>
     </button>
     <span class="toolbar-title"> {{ 'APP_TOOLBAR_TITLE' }} </span>
@@ -21,4 +21,5 @@
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
+
 
